--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
  */
 plugins {
     id "com.jfrog.bintray" version "1.8.1"
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
 allprojects { 
@@ -25,8 +26,13 @@ version = buildNumberForThisEnvironment
 /*
  * SOURCE: source specific configuration
  */
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 14
+targetCompatibility = 14
+
+javafx {
+    version = "14"
+    modules = [ 'javafx.base', 'javafx.controls', 'javafx.media', 'javafx.graphics']
+}
 
 sourceSets {
     main {
@@ -61,14 +67,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'uk.dangrew', name: 'dag-kode', version: '1.0.38'
+    compile group: 'uk.dangrew', name: 'dag-kode', version: '1.0.66'
     compile group: 'org.controlsfx', name: 'controlsfx', version:'8.40.11'
     compile group: 'dom4j', name: 'dom4j', version:'1.6.1'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.1.2'
     compile group: 'org.json', name: 'json', version:'20151123'
     compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
 
-    testCompile group: 'uk.dangrew', name: 'dag-kode', version: '1.0.38', classifier: 'tests'
+    testCompile group: 'uk.dangrew', name: 'dag-kode', version: '1.0.66', classifier: 'tests'
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'pl.pragmatists', name: 'JUnitParams', version:'1.0.5'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version:'1.3'
